# spaceviata

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml  release.yaml
assets/: star.names
assets/shaders/: starfield.wgsl
src/: assets.rs  lib.rs  lost.rs  main.rs  menu.rs  splash.rs
src/assets/: loader.rs  mod.rs  names.rs
src/game/: bots.rs  fleet.rs  galaxy.rs  mod.rs  setup.rs  starfield.rs  toast.rs  turns.rs  ui.rs  world.rs
src/game/ui/: left_panel.rs  menu.rs  mod.rs  shipyard.rs  turn.rs
src/ui_helper/: button.rs  mod.rs
wasm/: index-dev.html  index.html  live.js
