[package]
name = "spaceviata"
version = "0.1.5"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
bevy = { version = "0.9.0-dev", default-features = false, features = [
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_sprite",
  "bevy_winit",
  "bevy_render",
  "bevy_text",
  "bevy_audio",
  "png",
  "vorbis",
  "bevy_gilrs",
] }

bevy_embedded_assets = { version = "0.5.0-dev", optional = true }
bevy_asset_loader = { version = "0.12", default-features = false }
bevy_easings = { version = "0.9.0", default-features = false, features = [ "ui", "render" ] }
bevy_ninepatch = { version = "0.8.0", default-features = false }

# Needed to control log level by feature for release
tracing = { version = "0.1", optional = true }

rand = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
bevy = { version = "0.9.0-dev", features = [
  "x11",
] }

[features]
default = []
hot = [ "bevy/filesystem_watcher" ]
release = [ "bundled", "tracing/release_max_level_warn" ]
bundled = [ "bevy_embedded_assets" ]
trace = [ "bevy/trace" ]
tracy = [ "bevy/trace", "bevy/trace_tracy" ]
# debug-graph = [ "bevy_mod_debugdump" ]


[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.spaceviata]
opt-level = 3

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1

[patch.crates-io]
bevy = { git = "https://github.com/bevyengine/bevy" }
bevy_embedded_assets = { git = "https://github.com/vleue/bevy_embedded_assets" }
bevy_easings = { git = "https://github.com/vleue/bevy_easings" }
bevy_ninepatch = { git = "https://github.com/vleue/bevy_ninepatch" }
bevy_asset_loader = { git = "https://github.com/rparrett/bevy_asset_loader", branch = "bevy-9"}


[package.metadata.release]
release = true
