[package]
name = "spaceviata"
version = "0.1.26"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "spaceviata"
crate-type = ["staticlib", "lib"]

[dependencies]
bevy = { version = "0.9", default-features = false, features = [
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_sprite",
  "bevy_winit",
  "bevy_render",
  "bevy_text",
  "png",
] }

bevy_embedded_assets = { version = "0.6", optional = true }
bevy_asset_loader = { version = "0.14", default-features = false }
bevy_easings = { version = "0.9.0", default-features = false, features = [ "ui", "render" ] }
bevy_ninepatch = { version = "0.9", default-features = false }
bevy_prototype_lyon = "0.7"

# Needed to control log level by feature for release
tracing = { version = "0.1", optional = true }

anyhow = "1.0"
material-icons = "0.2.0"
rand = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
bevy = { version = "0.9", features = [
  "x11",
] }

[features]
default = []
hot = [ "bevy/filesystem_watcher" ]
release = [ "bundled", "tracing/release_max_level_warn" ]
bundled = [ "bevy_embedded_assets" ]
trace = [ "bevy/trace" ]
tracy = [ "bevy/trace", "bevy/trace_tracy" ]
# debug-graph = [ "bevy_mod_debugdump" ]


[profile.dev.package."*"]
opt-level = 3

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1

[profile.native-release]
inherits = "release"
lto = true

[patch.crates-io]
winit = { git = "https://github.com/mockersf/winit", branch = "web-touch-event" }
bevy = { git = "https://github.com/mockersf/bevy", branch = "spaceviata-branch" }
bevy_prototype_lyon = { git = "https://github.com/mockersf/bevy_prototype_lyon", branch = "support-hdr-0.7" }
material-icons = { git = "https://github.com/mockersf/material-icons", branch = "update-font" }

[package.metadata.release]
release = true
